--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,12 @@
       <artifactId>mybatis-generator-core</artifactId>
       <version>1.3.6</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.alipay.sdk</groupId>
+      <artifactId>alipay-sdk-java</artifactId>
+      <version>3.4.49.ALL</version>
+    </dependency>
   </dependencies>
 
   <build>
